3pods.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name:  
spec:
  containers:
    - name: mariadb
      image: mariadb
