4pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: mariadb 
  labels:
    app: my-app
spec:
  containers:
    - name: mariadb 
      image: mariadb 
      ports:
      - name: maridb
        containerPort: 3306
    - name: MYSQL_ROOT_PASSWORD
      valueFrom:
        secretKeyRef:
          name: my-secret
          key: MYSQL_ROOT_PASSWORD
