configmap.yaml
---
apiVersion: v1 
kind: Pod 
metadata: 
  name: mariadb 
  labels:
    app: my-database 
spec: 
  containers: 
  - name: mariadb
    image: mariadb
    ports:
    - name: mariadb
      containerPort: 3306
...
