pod-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mariadb
  labels:
     app: my-app
spec:
  containers:
  - name: mariadb
    image: mariadb
    ports:
    - containerPort: 3306
