pod2.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod7
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
...
