re-set.yaml
---
apiVersion: v1
kind: Pod
matadata:
  name: nginx
  label:
    app: nginx
spec: 
  containers: 
  - name: nginx
    image: nginx:latest
    ports: 
      name: http
    - containerPorts: 80
...
---
apiVersion: v1
kind: Pod
matadata:
  name: tomcat
  label:
    app: tomcat
spec: 
  containers: 
    - name: tomcat
      image: tomcat:latest
    ports: 
      name: tomcat
    - containerPorts: 8080
    
...
