setfset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata: my-ss
spec: 
  template: 
    metadata: 
     labels:
      app: mariadb 
    spec:
      containers: 
      - name: mariadb
        image: mariadb
        ports: 
        - name: maridb
          porotocol: TCP 
          containerPort: 3306
selector:
  matchlabels:
    app: mariadb
repplicas: 3
