backend-pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: front-nodejs
  labels:
     app: my-backend
spec:
  containers:
  - name: backend 
    image: deepakumre/backend-blog-web
    ports:
    - containerPort: 3000
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-3
spec:
  type: NodePort
  selector:
    app: my-backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30003

...
