bend.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: back-end
  labels:
     app: my-bend
spec:
  containers:
  - name: back-end
    image: deepakumre/backend-blog-web
    ports:
    - containerPort: 3000
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  type: NodePort
  selector:
      app: my-bend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30012
...
