dep-hpa.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
  app: my-app
spec:
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
      app: my-app 
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
...
