mongo-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mongo-db
  labels:
     app: my-database
spec:
  containers:
  - name: mongodb
    image: deepakumre/mongodb
    ports:
    - containerPort: 27017
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30001

...
