mongo.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mongo
  labels:
     app: my-mongo
spec:
  containers:
  - name: mongo
    image: deepakumre/mongodb
    ports:
    - containerPort: 27017
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
      app: my-mongo
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30010
...
