my-page.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx
    image: deepakumre/mobile-page
    ports:
    - name: http
      containerPort: 80
  - name: nginx
    image: deepakumre/desktop-page
    ports:
    - name: http
      containerPort: 80
  - name: nginx
    image: deepakumre/home-page
    ports:
    - name: http
      containerPort: 80
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIp
  selector:
      app: nginx-app 
  ports:
    - port: 80
      targetPort: 80
...
