my-page1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1
  labels:
    app: my-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app1
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-app1
    spec:
      containers:
      - name: nginx
        image: deepakumre/homepage
        ports:
        - containerPort: 80

...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service1
spec:
  type: ClusterIP
  selector:
      app: my-app1
  ports:
    - port: 80
      targetPort: 80
...
