my-page2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
  labels:
    app: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: nginx
        image: deepakumre/desktop-page
        ports:
        - containerPort: 80

...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service2
spec:
  type: ClusterIP
  selector:
      app: my-app
  ports:
    - port: 80
      targetPort: 80
...
