my-page3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx3
  labels:
    app: my-app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app3
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-app3
    spec:
      containers:
      - name: nginx
        image: deepakumre/desktop-page
        ports:
        - containerPort: 80

...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service3
spec:
  type: ClusterIP
  selector:
      app: my-app3
  ports:
    - port: 80
      targetPort: 80
...
