mydep2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: my-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: my-app
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: mongodb
        image: deepakumre/mongodb
        ports:
        - containerPort: 27017
      - name: frontend
        image: deepakumre/frontend-blog-web
        ports:
        - containerPort: 3000
      - name: backend
        image: deepakumre/backend-blog-web
        ports:
        - containerPort: 3000
... 
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-1
spec:
  type: NodePort
  selector:
    env:
    - name: ENV_TYPE
      value: database
  ports:
    - port: 27017
      targetPort: 27017
      nodePort: 30010
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-2
spec:
  type: NodePort
  selector:
    env:
    - name: ENV_TYPE
      value: frontend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30011
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-3
spec:
  type: NodePort
  selector:
    env:
    - name: ENV_TYPE
      value: backend
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30012
...
