replicationSet.yml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
      app: my-app 
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
...
