service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector:
    labels:
      app: my-app 
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
